--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>bus_routes</groupId>
-  <artifactId>bus_routes</artifactId>
+  <groupId>routes</groupId>
+  <artifactId>routes</artifactId>
   <version>1.0</version>
-  <name>bus_routes</name>
+  <name>routes</name>
   <packaging>jar</packaging>
   <build>
     <plugins>
@@ -52,6 +52,13 @@
       <artifactId>gson</artifactId>
       <version>2.8.0</version>
       <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
