Update pom.xml to create jar file.

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
@@ -24,14 +25,24 @@
           <target>1.8</target>
           <archive>
             <manifest>
-              <mainClass>Main</mainClass>
+              <mainClass>routes.Main</mainClass>
             </manifest>
           </archive>
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
         </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
+
     </plugins>
   </build>
   <dependencies>
